.provarCaches/00D5h000009Q6XQEA0/objects/provar__Feature__c.object
<CustomObject>
    <description>Describes high-level pieces of work and their place within the test plan.</description>
    <fields>
        <fullName>provar__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>provar__Effort_Days__c</fullName>
        <label>Effort (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__In_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Parent_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Feature</label>
        <referenceTo>provar__Feature__c</referenceTo>
        <relationshipLabel>Subfeatures</relationshipLabel>
        <relationshipName>Subfeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan__c</fullName>
        <label>Test Plan</label>
        <referenceTo>provar__Test_Plan__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>